syntax = "proto3";
package proto;

import "user/const.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option go_package = "grpc/gateway/proto";

// model
message User {
  string firstname = 1;
  string lastname = 2;
  uint64 number = 3;
}

message UserList {
  string id = 1;
  string name = 2;
  UserType type = 3;
}